made landing page kinda

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,4 @@
-ul {
-    color: red;
-    list-style: none;
-    li {
-        color: blue;
-        display: inline;
-        padding-right: 15px;
-        cursor: pointer;
-        &:hover {
-            color: brown;
-        }
-    }
-}
+@import "partials/setting";
+
+@import "partials/nav";
+@import "partials/section";
