--- a/sass/partials/setting.scss
+++ b/sass/partials/setting.scss
@@ -12,6 +12,6 @@ body {
     z-index: -9999;
     width: 100%;
     height: 100%;
-    background-image: url('../images/banner.jpg');
+    background-image: url('../images/banner2.jpg');
     background-size: cover;
 }
